--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Yew</title>
-    <link rel="stylesheet" type="text/css" href="./styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="../frontend/tailwind-yew-builder/output/tailwind.css"/>
     <script src="./pkg/bundle.js" defer></script>
 </head>
 
